--- a/package.json
+++ b/package.json
@@ -1,16 +1,13 @@
 {
-  "name": "kdhoet-visualizer-pro",
+  "name": "kdhoet-visualizer",
   "version": "1.0.0",
   "main": "main.js",
   "scripts": {
-    "build": "electron-builder"
+    "start": "electron .",
+    "build": "electron-builder --win --portable"
   },
   "devDependencies": {
     "electron": "^28.0.0",
     "electron-builder": "^24.9.1"
-  },
-  "build": {
-    "appId": "com.kdhoet.studio",
-    "win": { "target": "portable" }
   }
 }
