--- a/package.json
+++ b/package.json
@@ -4,10 +4,22 @@
   "main": "main.js",
   "scripts": {
     "start": "electron .",
-    "build": "electron-builder --win --portable"
+    "build": "electron-builder --win"
   },
   "devDependencies": {
     "electron": "^28.0.0",
     "electron-builder": "^24.9.1"
+  },
+  "build": {
+    "appId": "com.kdhoet.studio",
+    "productName": "Kdhoet Studio AI",
+    "win": {
+      "target": [
+        "portable"
+      ]
+    },
+    "directories": {
+      "output": "dist"
+    }
   }
 }
