--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,22 +5,13 @@ jobs:
   release:
     runs-on: windows-latest
     steps:
-      - name: Check out repository
+      - name: Check out git repository
         uses: actions/checkout@v4
 
-      - name: Setup Node.js
+      - name: Install Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 20
 
       - name: Install dependencies
-        run: npm install
-
-      - name: Build Electron App
-        run: npm run build
-
-      - name: Upload Artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: Kdhoet-Visualizer-EXE
-          path: dist/*.exe
+        run:
