--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,13 +5,22 @@ jobs:
   release:
     runs-on: windows-latest
     steps:
-      - name: Check out git repository
+      - name: Check out repository
         uses: actions/checkout@v4
 
-      - name: Install Node.js
+      - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 20
 
       - name: Install dependencies
-        run:
+        run: npm install
+
+      - name: Build Electron App
+        run: npm run build
+
+      - name: Upload Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: Kdhoet-Studio-EXE
+          path: dist/*.exe
